<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:id="@+id/linearLayout">
    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/checkbox1"
        android:layout_width="10dp"
        android:layout_height="30dip"
        android:layout_marginTop="11dp"
        android:layout_marginStart="-10dp"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_check_box_outline_blank_black_24dp"
        android:contentDescription="@string/check_box" />

    <ImageView
        android:id="@+id/checked1"
        android:layout_width="10dp"
        android:layout_height="35dip"
        android:layout_marginTop="7dp"
        android:layout_marginStart="-60dp"
        android:scaleType="fitCenter"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_check_black_24dp"
        android:contentDescription="@string/check"
        android:visibility="invisible"/>
    </LinearLayout>


    <TextView
        android:id="@+id/itemName"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:text="@string/name_of_item"
        android:textColor="#000000"
        android:textSize="18sp" />

    <View
        android:layout_width="15dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/qtyNum"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/qty"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="18sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:visibility="invisible" />
</LinearLayout>