<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/enter_subject"
            android:inputType="date|textUri|textShortMessage|textLongMessage|textAutoCorrect|none|numberSigned|textVisiblePassword|textWebEditText|textMultiLine|textNoSuggestions|textFilter|number|datetime|textWebEmailAddress|textPersonName|text|textPhonetic|textCapSentences|textPassword|textAutoComplete|textImeMultiLine|textPostalAddress|numberDecimal|textEmailSubject" />
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_bug_report"
                android:gravity="center"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <View
            android:layout_width="10dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/bugReportBack"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="clip_vertical"
            android:layout_weight="1"
            android:background="#B2D235"
            android:text="@string/back_rename" />
        <View
            android:layout_width="10dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/sendBugReport"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="clip_vertical"
            android:layout_weight="1"
            android:background="#B2D235"
            android:text="@string/send" />
        <View
            android:layout_width="10dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:visibility="invisible"
            />


    </LinearLayout>

</LinearLayout>