<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addItemScreenConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/enterListName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:hint="@string/new_list_name"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createListBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#00B2D235"
        android:fontFamily="sans-serif"
        android:onClick="createList"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/create_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#00AAAD"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/createListScreenListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/createListScreenListView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/createListScreenListView2"
        android:layout_width="190dp"
        android:layout_height="match_parent"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:tag="De-selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemToAddBox">

    </ListView>

    <SearchView
        android:id="@+id/createListSearchView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:imeOptions="actionDone"
        app:defaultQueryHint="@string/type_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterListName" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:entries="@array/ItemtypeArray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterListName" />

    <TextView
        android:id="@+id/itemToAddBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="95dp"
        android:text="@string/items_added"
        android:textColor="#B2D235"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createListSearchView" />

    <ImageButton
        android:id="@+id/createListScreenBackBtn"
        android:layout_width="35dip"
        android:layout_height="35dip"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back"
        android:onClick="goBackToHome"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp"  />


</androidx.constraintlayout.widget.ConstraintLayout>