<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addItemScreenConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addItemScreenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:fontFamily="serif-monospace"
        android:text="@string/list_name_edit_screen"
        android:textColor="#B2D235"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addItemScreenBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#00B2D235"
        android:fontFamily="sans-serif"
        android:onClick="goBackToListPage"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/done"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#00AAAD"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/addItemListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addItemListView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/addItemListView2"
        android:layout_width="190dp"
        android:layout_height="match_parent"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"
        android:tag="De-selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

    <SearchView
        android:id="@+id/addItemSearchBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:imeOptions="actionDone"
        app:defaultQueryHint="@string/type_item_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemScreenTextView" />

    <Spinner
        android:id="@+id/addItemSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:entries="@array/ItemtypeArray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemScreenTextView" />

    <TextView
        android:id="@+id/itemAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="95dp"
        android:text="@string/items_added"
        android:textColor="#B2D235"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addItemSearchBar" />

</androidx.constraintlayout.widget.ConstraintLayout>